infra/platform/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform
  labels:
    vault-injection: enabled
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
